Closed
Bug 142461
Opened 23 years ago
Closed 23 years ago
overflow: hidden gets in the way
Categories
(Core :: Web Painting, defect, P1)
Core
Web Painting
Tracking
()
RESOLVED
FIXED
mozilla1.1alpha
People
(Reporter: jc, Assigned: roc)
References
()
Details
Attachments
(2 files)
1.02 KB,
text/html
|
Details | |
4.11 KB,
patch
|
kmcclusk
:
review+
waterson
:
superreview+
|
Details | Diff | Splinter Review |
From Bugzilla Helper:
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.0rc1)
Gecko/20020417
BuildID: 2002041711
When an absolutely positioned div has the overflow property set to "hidden", the
hidden part of the div is not displayed as expected, but any page content behind
that hidden part is not rendered as well.
Reproducible: Always
Steps to Reproduce:
Open http://manoli.net/wot/
Actual Results: The first <h1> paragraph "Personal Certificates for Web and
Mail" is not displayed, and the first image is truncated.
Expected Results: The <h1> paragraph should be displayed and the image should
not be truncated.
Reporter | ||
Comment 1•23 years ago
|
||
![]() |
||
Comment 2•23 years ago
|
||
Confirmed on Linux as well. Raising severity, since this is a fairly common
thing to do with positioned content....
Assignee: attinasi → kmcclusk
Severity: normal → major
Status: UNCONFIRMED → NEW
Component: Layout → Views
Ever confirmed: true
OS: Windows XP → All
Hardware: PC → All
Assignee | ||
Comment 4•23 years ago
|
||
Need to generalize the test for whether part of a view is being clipped out and
therefore the view should be marked transparent. It needs to be checked on both
"clip:" and "overflow: hidden". (The "overflow: hidden" case matters when the
view is larger than its frame.)
Assignee | ||
Updated•23 years ago
|
Priority: -- → P1
Target Milestone: --- → mozilla1.1alpha
Comment 6•23 years ago
|
||
Attachment #85717 -
Flags: review+
Comment 7•23 years ago
|
||
Comment on attachment 85717 [details] [diff] [review]
Fix
sr=waterson
Attachment #85717 -
Flags: superreview+
Assignee | ||
Comment 8•23 years ago
|
||
Fix checked into trunk.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Updated•7 years ago
|
Component: Layout: View Rendering → Layout: Web Painting
You need to log in
before you can comment on or make changes to this bug.
Description
•