Bug 142461. Make sure clipped views are not marked transparent. r=kmcclusk,sr=waterson